[project]
name = "docker-tags-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker==6.1.2",
    "inquirerpy==0.3.4",
    "python-dotenv==1.2.1",
    "requests==2.31.0",
    "rich==13.5.2",
    "tabulate==0.9.0",
    "yaspin==3.0.2",
]
